--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,6 @@
 [theme]
-primaryColor="#cbc477"
-backgroundColor="#dedbdb"
-secondaryBackgroundColor="#262837"
-textColor="#b52424"
+base="light"
+primaryColor="#949373"
+secondaryBackgroundColor="#578bc1"
+textColor="#3b3b3b"
 font="serif"
-
